Fixed overflowing citation

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ footer {
 
 p {
     text-align: justify;
+    overflow-wrap: break-word;
 }
 
 #title {
